# tamp_physical_improvisation

./: .gitignore  .pylintrc  LICENSE  README.md  bowen_test.sh  config.json  graph_rl_test.txt  log_eval.txt  pyproject.toml
.github/workflows/: ci.yml
experiments/: README.md  abstract_her.py  abstract_subgoals.py  hierarchical_rl.py  pure_planning.py  pure_rl.py  run_single_experiment.py  sac_her.py  slap_eval.py  slap_train.py
experiments/conf/approach/: random.yaml  search.yaml
experiments/conf/benchmark/: maze_large.yaml  maze_small.yaml
experiments/configs/: cleanup_table.yaml  cluttered_drawer.yaml  obstacle2d.yaml  obstacle_tower.yaml
scripts/: evaluate_number_policy.py  evaluate_pushing_policy.py  evaluate_pushing_policy_old.py  plotting.py  train_and_evaluate.py  train_number_policy.py  train_number_policy_old.py  train_pushing_policy.py  train_pushing_policy_old.py
src/tamp_improv/: blocks2d_planning.py  number_planning.py  plotting.py  run_experiment.py  run_experiments.py  run_graph_experiment.py  run_pybullet_experiment.py  utils.py
src/tamp_improv/approaches/: base.py  base_approach.py  base_improvisational_tamp_approach.py  blocks2d_improvisational_tamp_approach.py  hierarchical_rl.py  improvisational.py  improvisational_tamp_approach.py  mpc.py  mpc_blocks2d_improvisational_tamp_approach.py  mpc_improvisational_policy.py  mpc_improvisational_tamp_approach.py  mpc_number_improvisational_tamp_approach.py  predictive_sampling_policy.py  pure_rl.py  random.py  random_approach.py  (+7 more)
test_data/test_goal_policy/: model_action_space.pkl  model_observation_space.pkl  node_states.pkl  valid_shortcuts.pkl
tests/approaches/: test_atom_substitution.py  test_base.py  test_blocks2d_improvisational_tamp_approach.py  test_framework.py  test_graph.py  test_graph_training.py  test_her.py  test_hierarchical_rl.py  test_improvisational.py  test_improvisational_tamp_approach.py  test_mpc_blocks2d_improvisational_tamp_approach.py  test_mpc_blocks2d_improvisational_tamp_approach_old.py  test_mpc_improvisational_tamp_approach.py  test_mpc_number_improvisational_tamp_approach.py  test_pure_rl.py  test_pybullet_import.py  test_random_approach.py  test_rl2mpc.py  test_rl_blocks2d_improvisational_tamp_approach.py  test_rl_blocks2d_improvisational_tamp_approach_old.py  test_rl_improvisational_policy.py  test_rl_improvisational_tamp_approach.py  test_rl_number_improvisational_tamp_approach.py  test_search_approach.py  test_task_then_motion_planning_approach.py  test_task_then_motion_planning_approach_old.py
tests/benchmarks/: test_blocks2d.py  test_blocks2d_env.py  test_blocks2d_env_old.py  test_blocks2d_env_planning.py  test_blocks2d_env_planning_old.py  test_blocks2d_planning.py  test_blocks2d_tamp.py  test_maze_benchmark.py  test_number.py  test_number_env.py  test_number_env_old.py  test_number_env_planning.py  test_number_env_planning_old.py  test_number_planning.py  test_number_tamp.py  test_obstacle2d_env.py  test_obstacle2d_tamp.py  test_pushing_env.py  test_pybullet.py  test_pybullet_import.py  test_pybullet_replan.py
tests/scripts/: test_evaluate_pushing_policy.py  test_train_pushing_policy.py
train_data/CleanupTableTAMPSystem/: config.json  current_atoms.pkl  goal_atoms.pkl  states.pkl  trained_signatures.pkl
train_data/ClutteredDrawerTAMPSystem/: config.json  current_atoms.pkl  goal_atoms.pkl  states.pkl  trained_signatures.pkl
train_data/GraphObstacleTowerTAMPSystem/: config.json  current_atoms.pkl  goal_atoms.pkl  states.pkl  trained_signatures.pkl
train_data/Obstacle2DTAMPSystem/: config.json  current_atoms.pkl  goal_atoms.pkl  preimages.pkl  states.npy  states.pkl  trained_signatures.pkl
(+49 files in other folders)
