[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "tamp_improv"
version = "0.1.0"
description = "TAMP physical improvisation."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
   "matplotlib",
   "numpy",
   "pandas",
   "pandas-stubs",
   "hydra-core",
   "omegaconf",
   "tomsutils@git+https://github.com/tomsilver/toms-utils.git",
   "tomsgeoms2d@git+https://github.com/tomsilver/toms-geoms-2d",
   "task-then-motion-planning@git+https://github.com/tomsilver/task-then-motion-planning.git",
   "relational-structs@git+https://github.com/tomsilver/relational-structs.git",
   "pybullet-blocks@git+https://github.com/tomsilver/pybullet-blocks.git",
   "pybullet_helpers@git+https://github.com/tomsilver/pybullet-helpers.git",
   "gymnasium>=1.0.0",
   "objaverse",
   "moviepy",
   "stable_baselines3==2.4.0",
   "types-tabulate",
]

[project.optional-dependencies]
develop = [
    "black",
    "docformatter",
    "isort",
    "mypy",
    "pylint>=2.14.5",
    "pytest-pylint>=0.18.0",
    "pytest>=7.2.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tamp_improv = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
py_version = 311
profile = "black"
multi_line_output = 2
skip_glob = ["venv/*"]
split_on_trailing_comma = true

[tool.mypy]
strict_equality = true
disallow_untyped_calls = true
warn_unreachable = true
exclude = ["venv/*", "scripts/*"]

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "networkx.*",
    "objaverse.*",
]
ignore_missing_imports = true
